Fix spacings for all elements in single-post

--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+:root {
+  --global-md-spacing: 2rem;
+}
+
 *,
 *::before,
 *::after {
