--- a/src/sass/assets/cppmoderno/_single-post.scss
+++ b/src/sass/assets/cppmoderno/_single-post.scss
@@ -16,8 +16,48 @@ code {
             color: rgba(37, 38, 94, 0.8);
         }
 
+        h2 {
+            font-size: min(28px, 2rem);
+            line-height: 1.5;
+            margin: .5em 0 0.5em;
+        }
+
+        ul {
+            text-align: justify;
+        }
+
+         address,
+         figure,
+         hr,
+         p,
+         table,
+         pre,
+         form,
+         .wp-block-buttons,
+         .wp-block-button,
+         .wc-block-grid,
+         .wp-block-kadence-advancedbtn,
+         .wp-block-media-text,
+         .wp-block-cover,
+         -asset,
+         .wp-block-kadence-form,
+         .wp-block-group,
+         .wp-block-yoast-faq-block,
+         .wp-block-yoast-how-to-block,
+         .schema-faq-section,
+         .wp-block-kadence-tableofcontents,
+         .enlighter-default,
+         .wp-block-kadence-iconlist,
+         [class*=__inner-content] {
+            margin-top: 0;
+            margin-bottom: var(--global-md-spacing)
+        }
+
         .wp-block-separator {
-            max-width: 160px;
+            &:not(.is-style-wide) {
+                max-width: 160px;
+            }
+
             border-top: 2px solid;
             margin-left: auto;
             margin-right: auto;
@@ -57,9 +97,9 @@ code {
 // It has been extracted from the #main block
 // because the TOC also exists in the sidebar
 .lwptoc {
-        .lwptoc_i {
-            background: var(--wp--preset--color--white) !important;
-        }
+    .lwptoc_i {
+        background: var(--wp--preset--color--white) !important;
+    }
 
     li.lwptoc_item {
 
